--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML5 e CSS3 - Site One Page</title>
+    <title>Correr é Viver</title>
     <meta name="description"
-        content="Aprenda HTML5, CSS3 e técnicas SEO de forma simples, prática e objetiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo.">
-    <link rel="icon" href="img/favicon.png">
+        content="Blog dedicado à prática de corrida, principalmente a amadora, apresentando dicas de treinos, dicas de produtos, eventos correntes, fortalecimento, e muitos outros">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +16,7 @@
     <header id="inicio">
         <div class="Container Flex">
             <div id="logo">
-                <img src="img/logo.png" alt="hal 9000">
+                <img src="img/logo.png" alt="">
             </div>
             <nav>
                 <input type="checkbox" id="check">
@@ -34,9 +33,9 @@
     <!-- Destaque -->
     <main>
         <div class="Container">
-            <h1>HTML5 e CSS3</h1>
-            <h2>Você faz. Você vê. Você aprende.</h2>
-            <a href="https://youtube.com/playlist?list=PLbEOwbQR9lqySIIlPJ-Qwo4f4HSuXVeWk&si=WD8y1YWCcnSZPNHm"
+            <h1>Correr é Viver</h1>
+            <h2>A prática de corrida como você nunca viu</h2>
+            <a href="#"
                 target="_blank" class="Botao">Saiba +</a>
         </div>
     </main>
@@ -44,10 +43,10 @@
     <section id="sobre">
         <div class="Container Flex2">
             <div id="destaqueSobre">
-                <img src="img/html5css3.jpg" alt="html5css3">
+                <img src="img/html5css3.jpg" alt="">
             </div>
             <div id="textoSobre">
-                <h2>Aprender na prática</h2>
+                <h2>Corrida de forma simples</h2>
                 <p>Aprenda HTML5, CSS3 e técnicas de SEO de forma simples, prática e objetiva desenvolvendo passo a
                     passo do zero até a hospedagem um site One Page moderno e responsivo.</p>
                 <div class="TopicosSobre Flex2">
