--- a/index.html
+++ b/index.html
@@ -46,20 +46,19 @@
                 <img src="img/html5css3.jpg" alt="">
             </div>
             <div id="textoSobre">
-                <h2>Corrida de forma simples</h2>
-                <p>Aprenda HTML5, CSS3 e técnicas de SEO de forma simples, prática e objetiva desenvolvendo passo a
-                    passo do zero até a hospedagem um site One Page moderno e responsivo.</p>
+                <h2>CORRIDA DE FORMA SIMPLES</h2>
+                <p>Tudo sobre o mundo da corrida em um só lugar</p>
                 <div class="TopicosSobre Flex2">
-                    <img src="img/html5.png" alt="html5">
-                    <p>HTML5 Semântico</p>
+                    <img src="img/html5.png" alt="">
+                    <p>Dicas de treino</p>
                 </div>
                 <div class="TopicosSobre Flex2">
-                    <img src="img/css3.png" alt="css3">
-                    <p>CSS Flexbox</p>
+                    <img src="img/css3.png" alt="">
+                    <p>Competições</p>
                 </div>
                 <div class="TopicosSobre Flex2">
-                    <img src="img/seo.png" alt="seo">
-                    <p>Técnicas de SEO</p>
+                    <img src="img/seo.png" alt="">
+                    <p>Review de produtos</p>
                 </div>
             </div>
         </div>
@@ -68,9 +67,8 @@
     <section id="onepage">
         <div class="Container Flex3">
             <div>
-                <h2>Site One Page</h2>
-                <p>Ideal para negócios de pequeno ou médio porte o site One Page é um site onde você inclui todas as
-                    informações que o visitante precisa de forma objetiva e criativa em uma única página.</p>
+                <h2>Também estamos no YouTube</h2>
+                <p>No nosso canal do 'Correr é Viver' entrevistamos atletas, fazemos treios gravados, damos dicas de execução, gravamos competições, comentamos produtos e respondemos perguntas ... ACESSA LÁ!</p>
             </div>
             <div id="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/bS720dGvAn8"
@@ -82,16 +80,11 @@
     </section>
     <!-- Wireframe -->
     <section id="wireframe">
-        <div class="Container Flex2">
+        <div class="Container Flex2 flex7">
             <div id="textoWire">
-                <h2>Wireframe</h2>
-                <p>Wireframe é uma representação visual da estrutura básica de uma página. Ele deve ser feito da maneira
-                    mais simples possível, mostrando apenas o essencial, como uma espécie de rascunho, sem cores ou
-                    imagens. Clique no botão <span>ou escaneie o QR Code </span>para obter o wireframe desta página.</p>
-                <a href="wireframe.pdf" target="_blank" class="Botao">PDF</a>
-            </div>
-            <div id="qrcode">
-                <img src="img/qrcode.png" alt="qrcode">
+                <h2>Rotina de treinos</h2>
+                <p>Toda os anos de experiência de atletas e profissionais apaixonados por corrida para te ajudar a alcançar a corrida perfeita</p>
+                <a href="#" target="_blank" class="Botao">Aprenda a montar o seu treino</a>
             </div>
         </div>
     </section>
